# micro-reddit

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 276d73e41be4_add_user_table.py  30ebfc134e5e_add_follows_model.py  879bcf23daa1_add_user_feed_model.py  d01491f127af_add_posts_table.py  e88566003e4c_add_users_feed_model.py
src/: main.py  models.py  repository.py  schemas.py
src/api/: __init__.py
src/api/admin/: __init__.py  views.py
src/api/admin/auth/: schemas.py  views.py
src/api/auth/: __init__.py  dependencies.py  service.py  views.py
src/api/auth/jwt/: repository.py  schemas.py  security.py  service.py
src/api/auth/users/: exceptions.py  models.py  repository.py  schemas.py  service.py
src/api/feeds/: models.py  repository.py  schemas.py  service.py  views.py
src/api/follows/: exceptions.py  models.py  repository.py  schemas.py  service.py  views.py
src/api/posts/: exceptions.py  models.py  repository.py  schemas.py  service.py  views.py
src/api/tasks/: feed_tasks.py
src/core/: __init__.py  broker.py  config.py  database.py  dependencies.py  exceptions.py  logger.py
src/tasks/: broker.py
src/utils/: security.py
tests/: conftest.py  test_connection.py
tests/users/: conftest.py  test_api.py
