[project]
name = "micro-reddit"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobcrypt>=3.2.0.post1",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "fastapi>=0.116.0",
    "orjson>=3.10.18",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-dotenv>=0.5.2",
]
